Fix small spacing issues

--- a/portal/static/portal/sass/partials/_banners.scss
+++ b/portal/static/portal/sass/partials/_banners.scss
@@ -164,12 +164,6 @@
   }
 }
 
-.banner__text--primary,
-.banner__text--secondary {
-  @include _font-size(72px);
-  @include _line-height(75px);
-}
-
 .banner__text--primary {
   color: $color-text-secondary;
 }
@@ -376,6 +370,14 @@
     .col-sm-7 {
       width: 100%;
     }
+  }
+}
+
+@media (min-width: $tablet-large-min-width) {
+  .banner__text--primary,
+  .banner__text--secondary {
+    @include _font-size(72px);
+    @include _line-height(75px);
   }
 }
 
